packages/ui/src/styles/main.css
* {
    box-sizing: border-box;
}

html, body, #app {
    height: 100%;
}

html {
    --font-monospace: Menlo, Monaco, Consolas, 'Droid Sans Mono', 'Courier New', monospace,
        'Droid Sans Fallback';
    --font-default: -apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', 'HelveticaNeue-Light',
        'Ubuntu', 'Droid Sans', sans-serif;
    --default-border-color: lightgrey;
    --border-color-lighter: #f1f1f1;
    --border-color-lighter-darkened: #f1f1f147;
    --base-color-success: #047857;
    --base-color-info: #097bed;
    --base-color-warning: #ffb400;
    --base-color-error: #b91c1c;
    --background-color: white;
    --text-color: black;
    --caret-color: black;
    --scrollbar: #dfdfdf;
    --scrollbar-background: #f3f2f2;
    --link-color: rgb(0, 0, 238);
    --input-disabled-background-color: rgba(239, 239, 239, 0.3);
    --input-disabled-color: rgb(84, 84, 84);
    --button-background-color: white;
    --button-hover-background-color: #f8f8f8;
    --button-text-color: black;
    --button-border-color: #8c8c8c;
    --modal-background-color: white;
    --modal-text-color: black;
    --modal-caret-color: black;
    --modal-border-color: lightgrey;
    --modal-scrollbar: #dfdfdf;
    --modal-scrollbar-background: #f3f2f2;
    --modal-button-background-color: white;
    --modal-button-hover-background-color: #f8f8f8;
    --modal-button-text-color: black;
    --modal-button-border-color: #8c8c8c;
    --sidebar-item-active-color: #f3f3f3;
    --resizer-background-color: #f1f1f1;
    --response-panel-history-select-hover-color: #f7f7f7;
    --response-panel-loader-background-color: #29292969;
    --response-panel-loader-color: #292929;
    --github-button-icon-fill-color: black;
    --cm-string: #a11;
    --cm-boolean: #219;
    --cm-null: #708;
    --cm-number: #164;
    --modal-cm-string: #a11;
    --modal-cm-boolean: #219;
    --modal-cm-null: #708;
    --modal-cm-number: #164;
    --drop-target-background-color: #ffc0cb1f;
    --workspace-menu-hover-background-color: #dbedff;
    --method-get: #ab7aff;
    --method-post: #9ed06c;
    --method-put: #e17611;
    --method-delete: #d02141;
    --method-patch: #fcca25;
    --method-options: #2bc2f0;
    --method-head: #267aba;
    --socket-header-background-color: #edf2f7;
    --socket-button-background-color: cadetblue;
    --socket-input-disabled-background-color: #fafbfd;
    --socket-green-row-background-color: #ddffb6;
    --valid-env-highlight-color: #2e7d32;
    --valid-env-highlight-background-color: #e8f5e9;
    --invalid-env-highlight-color: #d32f2f;
    --invalid-env-highlight-background-color: #ffebee;
    --modal-valid-env-highlight-color: #2e7d32;
    --modal-valid-env-highlight-background-color: #e8f5e9;
    --modal-invalid-env-highlight-color: #d32f2f;
    --modal-invalid-env-highlight-background-color: #ffebee;
}

html.theme-dark {
    --default-border-color: #484848;
    --border-color-lighter: #484848;
    --border-color-lighter-darkened: #48484847;
    --base-color-success: #0bb27e;
    --base-color-info: #097bed;
    --base-color-warning: #ffb400;
    --base-color-error: #f06f57;
    --background-color: #292929;
    --text-color: #e0e0e0;
    --caret-color: #e0e0e0;
    --scrollbar: #505050;
    --scrollbar-background: #353535;
    --link-color: #d9c9ff;
    --input-disabled-background-color: rgba(59, 59, 59, 0.3);
    --input-disabled-color: rgb(170, 170, 170);
    --button-background-color: #292929;
    --button-hover-background-color: #595858;
    --button-text-color: #e0e0e0;
    --button-border-color: #8c8c8c;
    --modal-background-color: white;
    --modal-text-color: black;
    --modal-caret-color: black;
    --modal-border-color: lightgrey;
    --modal-scrollbar: #dfdfdf;
    --modal-scrollbar-background: #f3f2f2;
    --modal-button-background-color: white;
    --modal-button-hover-background-color: #f8f8f8;
    --modal-button-text-color: black;
    --modal-button-border-color: #8c8c8c;
    --sidebar-item-active-color: #353535;
    --resizer-background-color: #353535;
    --response-panel-history-select-hover-color: #353535;
    --response-panel-loader-background-color: #29292969;
    --response-panel-loader-color: white;
    --github-button-icon-fill-color: white;
    --cm-string: #ff6464;
    --cm-boolean: #b0a4ff;
    --cm-null: #f190ff;
    --cm-number: #1cd58b;
    --modal-cm-string: #a11;
    --modal-cm-boolean: #219;
    --modal-cm-null: #708;
    --modal-cm-number: #164;
    --drop-target-background-color: #f8889b41;
    --workspace-menu-hover-background-color: #505050;
    --socket-header-background-color: var(--sidebar-item-active-color);
    --socket-button-background-color: #2c3f40;
    --socket-input-disabled-background-color: #2d2d2d;
    --socket-green-row-background-color: #88ff0017;
    --valid-env-highlight-color: #a5d6a7;
    --valid-env-highlight-background-color: #1b5e20;
    --invalid-env-highlight-color: #ffcccb;
    --invalid-env-highlight-background-color: #7c0404;
    --modal-valid-env-highlight-color: #2e7d32;
    --modal-valid-env-highlight-background-color: #e8f5e9;
    --modal-invalid-env-highlight-color: #d32f2f;
    --modal-invalid-env-highlight-background-color: #ffebee;
}

* {
    caret-color: var(--caret-color);
}

body {
    font-family: var(--font-default);
    font-size: 13px;
    background-color: var(--background-color);
    color: var(--text-color);
}

::-webkit-scrollbar {
    width: 9px;
    height: 5px;
    background-color: var(--scrollbar-background);
}

::-webkit-scrollbar-thumb {
    background: var(--scrollbar);
    height: 70%;
}

[class*='request-method--'] {
    font-weight: 600;
}

.request-method--GET, .request-method--SOCK {
    color: var(--method-get);
}

.request-method--POST {
    color: var(--method-post);
}

.request-method--PUT {
    color: var(--method-put);
}

.request-method--PATCH {
    color: var(--method-patch);
}

.request-method--DELETE {
    color: var(--method-delete);
}

.request-method--OPTIONS {
    color: var(--method-options);
}

.request-method--HEAD {
    color: var(--method-head);
}

/* firefox fixes */
@-moz-document url-prefix() {
    * {
        scrollbar-width: thin;
    }
}

.code {
    display: inline-block;
    background-color: var(--modal-background-color);
    padding: 0.1rem 0.2rem;
    border: 1px solid var(--modal-border-color);
    font-family: var(--font-monospace);
    font-size: 0.9em;
}

input, textarea, select {
    background-color: inherit;
    color: inherit;
}

select option {
    background-color: var(--background-color);
    color: var(--text-color);
}

input:disabled {
    background-color: var(--input-disabled-background-color);
    color: var(--input-disabled-color);
    border: 1px solid var(--default-border-color);
}

input.full-width-input, select.full-width-input {
    width: 100%;
    border: 1px solid var(--modal-border-color);
    outline: 0;
    padding: 0.3rem;
    background: inherit;
}

select.full-width-input option {
    background-color: var(--modal-background-color);
    color: var(--modal-text-color);
}

.full-width-input.slim {
    padding: 0.1rem;
}

.modal * {
    caret-color: var(--modal-caret-color);
}

button.button {
    background-color: var(--button-background-color);
    color: var(--button-text-color);
    border: 1px solid var(--button-border-color);
    padding: 3px 10px;
    border-radius: 3px;
}

button.button:hover {
    background-color: var(--button-hover-background-color);
}

.modal button.button, .pwa-toast button.button {
    background-color: var(--modal-button-background-color);
    color: var(--modal-button-text-color);
    border: 1px solid var(--modal-button-border-color);
}

.modal button.button:hover, .pwa-toast button.button:hover {
    background-color: var(--modal-button-hover-background-color);
}

.cm-editor .cm-string:not(.cm-property) {
    color: var(--cm-string);
}

.cm-editor .cm-boolean {
    color: var(--cm-boolean);
}

.cm-editor .cm-null {
    color: var(--cm-null);
}

.cm-editor .cm-number {
    color: var(--cm-number);
}

.modal .cm-editor .cm-string:not(.cm-property) {
    color: var(--modal-cm-string);
}

.modal .cm-editor .cm-boolean {
    color: var(--modal-cm-boolean);
}

.modal .cm-editor .cm-null {
    color: var(--modal-cm-null);
}

.modal .cm-editor .cm-number {
    color: var(--modal-cm-number);
}

.cm-editor .valid-env-var {
    background-color: var(--valid-env-highlight-background-color);
    border-radius: 3px;
    padding: 2px 0;
    color: var(--valid-env-highlight-color);
}

.cm-editor .valid-env-var * {
    color: var(--valid-env-highlight-color) !important;
}

.cm-editor .invalid-env-var {
    background-color: var(--invalid-env-highlight-background-color);
    border-radius: 3px;
    padding: 2px 0;
    color: var(--invalid-env-highlight-color);
}

.cm-editor .invalid-env-var * {
    color: var(--invalid-env-highlight-color) !important;
}

.modal .cm-editor .valid-env-var {
    background-color: var(--modal-valid-env-highlight-background-color);
    color: var(--modal-valid-env-highlight-color);
}

.modal .cm-editor .valid-env-var * {
    color: var(--modal-valid-env-highlight-color) !important;
}

.modal .cm-editor .invalid-env-var {
    background-color: var(--modal-invalid-env-highlight-background-color);
    color: var(--modal-invalid-env-highlight-color);
}

.modal .cm-editor .invalid-env-var * {
    color: var(--modal-invalid-env-highlight-color) !important;
}

a {
    color: var(--link-color);
}

